--- a/WebApp.Site/package.json
+++ b/WebApp.Site/package.json
@@ -20,14 +20,14 @@
     "@angular/router": "^16.2.10",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
-    "primeng": "^15.4.11-lts",
+    "primeng": "^15.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.10",
-    "@angular/cli": "^15.2.10",
+    "@angular-devkit/build-angular": "^16.2.7",
+    "@angular/cli": "^16.2.7",
     "@angular/compiler-cli": "^16.2.10",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
