commented authentication feature by swagger

--- a/WebApp.API/appsettings.json
+++ b/WebApp.API/appsettings.json
@@ -11,7 +11,8 @@
   },
   "Jwt": {
     "Key": "5a69d5a3-68a0-43f4-96d7-40ea278b804d",
-    "Issuer": "WebApp"
+    "Issuer": "WebApp",
+    "Audience": "Users"
   }
 }
 
