--- a/WebApp.Site/package.json
+++ b/WebApp.Site/package.json
@@ -24,6 +24,7 @@
     "primeng": "^15.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
     "zone.js": "~0.13.3"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@angular/compiler-cli": "^16.2.10",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/uuid": "^9.0.6",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
