--- a/WebApp.API/appsettings.json
+++ b/WebApp.API/appsettings.json
@@ -7,12 +7,19 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=web-app;Username=postgres;Password=passwordpostgres"
+    "DefaultConnection": "Host=localhost;Database=web-app;Username=postgres;Password=postgres"
   },
   "Jwt": {
     "Key": "5a69d5a3-68a0-43f4-96d7-40ea278b804d",
     "Issuer": "WebApp",
     "Audience": "Users"
+  },
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SmtpUsername": "moneycontrolapp01@gmail.com",
+    "SmtpPassword": "jgjophspxluisvrx",
+    "SenderName": "Money Control App",
+    "SenderEmail": "moneycontrolapp01@gmail.com"
   }
 }
-
