update template body of confirmation email

--- a/WebApp.API/appsettings.json
+++ b/WebApp.API/appsettings.json
@@ -17,9 +17,9 @@
   "EmailSettings": {
     "SmtpServer": "smtp.gmail.com",
     "SmtpPort": 587,
-    "SmtpUsername": "moneycontrolapp01@gmail.com",
-    "SmtpPassword": "jgjophspxluisvrx",
+    "SmtpUsername": "rafaelalvesmds.dev@gmail.com",
+    "SmtpPassword": "fgxhfnuhuolovlbt",
     "SenderName": "Money Control App",
-    "SenderEmail": "moneycontrolapp01@gmail.com"
+    "SenderEmail": "rafaelalvesmds.dev@gmail.com"
   }
 }
