--- a/WebApp.API/appsettings.json
+++ b/WebApp.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=web-app;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=localhost;Database=web-app;Username=postgres;Password=passwordpostgres"
   },
   "Jwt": {
     "Key": "5a69d5a3-68a0-43f4-96d7-40ea278b804d",
