--- a/WebApp.API/appsettings.json
+++ b/WebApp.API/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=moneyapp;Username=moneyapp;Password=958c7187-ce3c-46be-93a5-321e56f2d849"
+    //"DefaultConnection": "Host=localhost;Database=moneyapp;Username=moneyapp;Password=958c7187-ce3c-46be-93a5-321e56f2d849",
+    "DefaultConnection": "Host=localhost;Database=web-app;Username=postgres;Password=passwordpostgres"
   },
   "Jwt": {
     "Key": "5a69d5a3-68a0-43f4-96d7-40ea278b804d",
