--- a/WebApp.Site/package.json
+++ b/WebApp.Site/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^17.3.1",
     "@angular/router": "^17.3.1",
     "@auth0/angular-jwt": "^5.1.2",
+    "chart.js": "^4.4.3",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^16.9.1",
