--- a/WebApp.Site/package.json
+++ b/WebApp.Site/package.json
@@ -23,7 +23,7 @@
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.9",
-    "rxjs": "~7.5.0",
+    "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
     "zone.js": "~0.14.10"
